--- a/player.html
+++ b/player.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/favicon.ico">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
