--- a/index.html
+++ b/index.html
@@ -211,30 +211,23 @@
         <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
 
               alt=""></a>
-          <h2 style="text-align: center;"></h2>
-          <h2 style="text-align: center;"></h2>
-          <h2 style="text-align: center;">______</h2>
-          <h2 style="text-align: center;">____</h2>
-          <h2 style="text-align: center;">__</h2>
-          <h2 style="text-align: center;">.</h2>
-          <h2 style="color:Lightblue; text-align: center;">THANKS FOR JOIN US</h2>
           <h2 style="text-align: center;">.</h2>
           <h2 style="text-align: center;">__</h2>
           <h2 style="text-align: center;">____</h2>
           <h2 style="text-align: center;">______</h2>
           <ul class="icons" style="text-align: center;">
-            <p style="color:Lightgreen;">listen to selection</p>
-            <li><a href="player.html" class="icon fa-play-circle" title="player"><span
-
-                  class="label">Player</span></a></li>
+            <li><a href="player.html" class="icon fa-play-circle" title="player">
+                <p>listen to selection</p>
+                <span class="label">player</span></a></li>
           </ul>
           <p></p>
           <p></p>
-          <p style="text-align: center;">Get in touch with our team</p>
           <ul class="icons" style="text-align: center;">
             <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
 
-                title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
+                title="mail us and we'll get 2 u">
+                <p style="text-align: center;">get in touch with our team</p>
+                <span class="label">Email</span></a></li>
           </ul>
         </article>
       </section>
