--- a/ita_index.html
+++ b/ita_index.html
@@ -212,31 +212,23 @@
         <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
 
               alt=""></a>
-          <h2 style="text-align: center;"></h2>
-          <h2 style="text-align: center;"></h2>
-          <h2 style="text-align: center;">______</h2>
-          <h2 style="text-align: center;">____</h2>
-          <h2 style="text-align: center;">__</h2>
-          <h2 style="text-align: center;">.</h2>
-          <h2 style="color:Lightblue; text-align: center;">GRAZIE PER AVER
-            VISITATO IL SITO</h2>
           <h2 style="text-align: center;">.</h2>
           <h2 style="text-align: center;">__</h2>
           <h2 style="text-align: center;">____</h2>
           <h2 style="text-align: center;">______</h2>
           <ul class="icons" style="text-align: center;">
-            <p style="color:Lightgreen;">Ascolta la selezione</p>
-            <li><a href="player.html" class="icon fa-play-circle" title="player"><span
-
-                  class="label">Player</span></a></li>
+            <li><a href="player.html" class="icon fa-play-circle" title="player">
+                <p>Ascolta la selezione</p>
+                <span class="label">player</span></a></li>
           </ul>
           <p></p>
           <p></p>
-          <p style="text-align: center;">Contattaci</p>
           <ul class="icons" style="text-align: center;">
             <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
 
-                title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
+                title="mail us and we'll get 2 u">
+                <p style="text-align: center;">Contattaci</p>
+                <span class="label">Email</span></a></li>
           </ul>
         </article>
       </section>
