--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
-          <h2 style="text-align: center;">BANDS</h2>
+          <h2 style="text-align: center; color:Lightgreen;">BANDS</h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
