--- a/ita_index.html
+++ b/ita_index.html
@@ -184,7 +184,7 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
-          <h2 style="text-align: center;">BANDS</h2>
+          <h2 style="text-align: center; color:Lightgreen;">BANDS</h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: center;">Lily's Puff / Sillyphon / The bench
